temp: structure 4th

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -139,4 +139,231 @@ console.log(arr.reduce(reducer)); // 10
 console.log(arr.reduce(reducer, 5)); // 15
 ```
 
+### 栈
+
+> 栈是一种先进先出(FIFO)线性表，是一种基于数组的数据结构。（ps：其实后面讲到数据结构的或多或少和数组有些影子）
+
+此处应该有栈相关的说明图img...
+
+我们实际上写一下，熟悉一下栈：
+
+```typescript
+class Stack {
+    constructor(){
+        this.items = [];
+    }
+    // 入栈操作
+    push(element = ''){
+        if(!element) return;
+        this.items.push(element);
+        return this;
+    }
+    // 出栈操作
+    pop(){
+        this.items.pop();
+        return this;
+    }
+    // 对栈一瞥，理论上只能看到栈顶或者说即将处理的元素
+    peek(){
+        return this.items[this.size() - 1];
+    }
+    // 打印栈数据
+    print(){
+        return this.items.join(' ');
+    }
+    // 栈是否为空
+    isEmpty(){
+        return this.items.length == 0;
+    }
+    // 返回栈的元素个数
+    size(){
+        return this.items.length;
+    }
+}
+let stack = new Stack(),
+    arr = ['鼠', '牛', '虎', '兔', '龙', '蛇', '马', '羊', '猴', '鸡', '狗', '猪'];
+arr.forEach(item => {
+    stack.push(item);
+});
+console.log(stack.print()); // 鼠 牛 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
+console.log(stack.peek()); // 猪
+stack.pop().pop().pop().pop();
+console.log(stack.print()); // 鼠 牛 虎 兔 龙 蛇 马 羊
+console.log(stack.isEmpty()); // false
+console.log(stack.size()); // 8
+```
+
+⚠️ 注意：我们栈这里的push和pop要和数组方法的push和pop方法区分下。
+
+### 队列
+
+> 此处应该有图片和相关的队列说明
+
+代码走一遍：
+
+```typescript
+// 队列
+class Queue {
+    constructor(){
+        this.items = [];
+    }
+    // 入队操作
+    enqueue(element = ''){
+        if(!element) return;
+        this.items.push(element);
+        return this;
+    }
+    // 出队操作
+    dequeue(){
+        this.items.shift();
+        return this;
+    }
+    // 查看队前元素或者说即将处理的元素
+    front(){
+        return this.items[0];
+    }
+    // 查看队列是否为空
+    isEmpty(){
+        return this.items.length == 0;
+    }
+    // 查看队列的长度
+    len(){
+        return this.items.length;
+    }
+    // 打印队列数据
+    print(){
+        return this.items.join(' ');
+    }
+}
+
+let queue = new Queue(),
+    arr = ['鼠', '牛', '虎', '兔', '龙', '蛇', '马', '羊', '猴', '鸡', '狗', '猪'];
+arr.forEach(item => {
+    queue.enqueue(item);
+});
+console.log(queue.print()); // 鼠 牛 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
+console.log(queue.isEmpty()); // false
+console.log(queue.len()); // 12
+queue.dequeue().dequeue();
+console.log(queue.front()); // 虎
+console.log(queue.print()); // 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
+```
+
+### 链表
+
+> 此处应该有相关的图片和说明文字
+
+```typescript
+// 链表
+class Node {
+    constructor(element){
+        this.element = element;
+        this.next = null;
+    }
+}
+
+class LinkedList {
+    constructor(){
+        this.length = 0; // 链表长度
+        this.head = new Node('head'); // 表头节点
+    }
+    /**
+     * @method find 查找元素的功能，找不到的情况下直接返回链尾节点
+     * @param { String } item 要查找的元素
+     * @return { Object } 返回查找到的节点 
+     */
+    find(item = ''){
+        let currNode = this.head;
+        while(currNode.element != item && currNode.next){
+            currNode = currNode.next;
+        }
+        return currNode;
+    }
+    /**
+    * @method findPrevious 查找链表指定元素的前一个节点
+    * @param { String } item 指定的元素
+    * @return { Object } 返回查找到的之前元素的前一个节点，找不到节点的话返回链尾节点
+    */
+    findPrevious(item){
+        let currNode = this.head;
+        while((currNode.next != null) && (currNode.next.element != item)){
+            currNode = currNode.next;
+        }
+        return currNode;
+    }
+    /**
+     * @method insert 插入功能
+     * @param { String } newElement 要出入的元素
+     * @param { String } item 想要追加在后的元素（此元素不一定存在）
+     */
+    insert(newElement = '', item){
+        if(!newElement) return;
+        let newNode = new Node(newElement),
+            currNode = this.find(item);
+        newNode.next = currNode.next;
+        currNode.next = newNode;
+        this.length++;
+        return this;
+    }
+    // 展示链表元素
+    display(){
+        let currNode = this.head,
+            arr = [];
+        while(currNode.next != null){
+            arr.push(currNode.next.element);
+            currNode = currNode.next;
+        }
+        return arr.join(' ');
+    }
+    // 链表的长度
+    size(){
+        return this.length;
+    }
+    // 查看链表是否为空
+    isEmpty(){
+        return this.length == 0;
+    }
+    /**
+     * @method indexOf 查看链表中元素的索引
+     * @param { String } element 要查找的元素
+     */
+    indexOf(element){
+        let currNode = this.head,
+            index = 0;
+        while(currNode.next != null){
+            index++;
+            if(currNode.next.element == element){
+                return index;
+            }
+            currNode = currNode.next;
+        }
+        return -1;
+    }
+    /**
+     * @method removeEl 移除指定的元素
+     * @param { String } element 
+     */
+    removeEl(element){
+        let preNode = this.findPrevious(element);
+        preNode.next = preNode.next != null ? preNode.next.next : null;
+    }
+}
+
+let linkedlist = new LinkedList();
+console.log(linkedlist.isEmpty()); // true
+linkedlist.insert('鼠').insert('虎').insert('牛', '鼠');
+console.log(linkedlist.display()); // 鼠 牛 虎
+console.log(linkedlist.find('猪')); // Node { element: '虎', next: null }
+console.log(linkedlist.find('鼠')); // Node { element: '鼠', next: Node { element: '牛', next: Node { element: '虎', next: null } } }
+console.log(linkedlist.size()); // 3
+console.log(linkedlist.indexOf('鼠')); // 1
+console.log(linkedlist.indexOf('猪')); // -1
+console.log(linkedlist.findPrevious('虎')); // Node { element: '牛', next: Node { element: '虎', next: null } }
+linkedlist.removeEl('鼠');
+console.log(linkedlist.display()); // 牛 虎
+```
+
+### 字典
+
+> 有待补充...
 
