issue: 11th issue

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -21,7 +21,7 @@
 
 ### 数组
 
-以十二生肖（鼠、牛、虎、兔、龙、蛇、马、羊、猴、鸡、狗、猪）排序为例：
+数组是一种线性结构，以十二生肖（鼠、牛、虎、兔、龙、蛇、马、羊、猴、鸡、狗、猪）排序为例：
 
 ![array_demo](https://img-fe.ggwan.com/images/d8779522d31c6d-2164x194.png)
 
@@ -46,6 +46,8 @@ arr.forEach((item, index) => {
 # [ 10 ] => 狗
 # [ 11 ] => 猪
 ```
+
+我们可以在数组的任意位置插入和删除数据，常用的属性和一些方法如下，直接调用相关的方法就可以实现。这里不做演示～
 
 **常用的属性**
 
@@ -141,9 +143,14 @@ console.log(arr.reduce(reducer, 5)); // 15
 
 ### 栈
 
-> 栈是一种先进先出(FIFO)线性表，是一种基于数组的数据结构。（ps：其实后面讲到数据结构的或多或少和数组有些影子）
+**栈**是一种后进先出(LIFO)线性表，是一种基于数组的数据结构。（ps：其实后面讲到数据结构的或多或少和数组有些影子）
 
-此处应该有栈相关的说明图img...
+- LIFO(last in first out)表示后进入的元素，第一个弹出栈空间。类似于自动餐托盘，最后放上去的托盘，往往先被拿出来使用。
+- 仅允许在表的一端进行插入和移除元素。这一端被称为**栈顶**，相对地，把另一端称为**栈底**。如下图的标识。
+- 向一个栈插入新元素称作**进栈、入栈或压栈**，它是将新元素放在栈顶元素上面，使之成为新的栈顶元素。
+- 从一个栈删除元素又称为**出栈或退栈**，它是把栈顶元素删除掉，使其相邻的元素成为新的栈顶元素。
+
+![stack_demo](https://img-fe.ggwan.com/images/e43e77fe798358-2136x706.png)
 
 我们实际上写一下，熟悉一下栈：
 
@@ -194,6 +201,8 @@ console.log(stack.size()); // 8
 ```
 
 ⚠️ 注意：我们栈这里的push和pop要和数组方法的push和pop方法区分下。
+
+> 有待补充执行环境文章
 
 ### 队列
 
@@ -367,5 +376,189 @@ console.log(linkedlist.display()); // 牛 虎
 
 > 此处应该有详细的文字说明并配上图片
 
+```typescript
+class Dictionary {
+    constructor(){
+        this.items = {};
+    }
+    /**
+     * @method set 设置字典的键值对
+     * @param { String } key 键
+     * @param {*} value 值
+     */
+    set(key = '', value = ''){
+        this.items[key] = value;
+        return this;
+    }
+    /**
+     * @method get 获取某个值
+     * @param { String } key 键
+     */
+    get(key = ''){
+        return this.has(key) ? this.items[key] : undefined;
+    }
+    /**
+     * @method has 判断是否含有某个键的值
+     * @param { String } key 键
+     */
+    has(key = ''){
+        return this.items.hasOwnProperty(key);
+    }
+    /**
+     * @method remove 移除元素
+     * @param { String } key 
+     */
+    remove(key){
+        if(!this.has(key))  return false;
+        delete this.items[key];
+        return true;
+    }
+    // 展示字典的键
+    keys(){
+        return Object.keys(this.items).join(' ');
+    }
+    // 字典的大小
+    size(){
+        return Object.keys(this.items).length;
+    }
+    // 展示字典的值
+    values(){
+        return Object.values(this.items).join(' ');
+    }
+    // 清空字典
+    clear(){
+        this.items = {};
+        return this;
+    }
+}
 
+let dictionary = new Dictionary(),
+    arr = ['鼠', '牛', '虎', '兔', '龙', '蛇', '马', '羊', '猴', '鸡', '狗', '猪'];
+    arr.forEach((item, index) => {
+        dictionary.set('第'+(++index)+'生肖', item);
+    });
+console.log(dictionary.keys()); // 第1生肖 第2生肖 第3生肖 第4生肖 第5生肖 第6生肖 第7生肖 第8生肖 第9生肖 第10生肖 第11生肖 第12生肖
+console.log(dictionary.values()); // 鼠 牛 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
+console.log(dictionary.has('第5生肖')); // true
+console.log(dictionary.get('第3生肖')); // 虎
+console.log(dictionary.remove('第12生肖')); // true
+console.log(dictionary.size()); // 11
+console.log(dictionary.clear().size()); // 0
+```
+
+### 集合
+
+> 相关的文字说明和图片啦
+
+es6中已经封装好了可用的[Set类](http://es6.ruanyifeng.com/#docs/set-map)。
+
+```typescript
+// 集合
+class Set {
+    constructor(){
+        this.items = [];
+    }
+    /**
+     * @method add 添加元素
+     * @param { String } element 
+     * @return { Boolean }
+     */
+    add(element = ''){
+        if(this.items.indexOf(element) >= 0) return false;
+        this.items.push(element);
+        return true;
+    }
+    // 集合的大小
+    size(){
+        return this.items.length;
+    }
+    // 集合是否包含某指定元素
+    has(element = ''){
+        return this.items.indexOf(element) >= 0;
+    }
+    // 展示集合
+    show(){
+        return this.items.join(' ');
+    }
+    // 移除某个元素
+    remove(element){
+        let pos = this.items.indexOf(element);
+        if(pos < 0) return false;
+        this.items.splice(pos, 1);
+        return true;
+    }
+    /**
+     * @method union 并集
+     * @param { Array } set 数组集合
+     * @return { Object } 返回并集的对象
+     */
+    union(set = []){
+        let tempSet = new Set();
+        for(let i = 0; i < this.items.length; i++){
+            tempSet.add(this.items[i]);
+        }
+        for(let i = 0; i < set.items.length; i++){
+            if(tempSet.has(set.items[i])) continue;
+            tempSet.items.push(set.items[i]);
+        }
+        return tempSet;
+    }
+    /**
+     * @method intersect 交集
+     * @param { Array } set 数组集合
+     * @return { Object } 返回交集的对象
+     */
+    intersect(set = []){
+        let tempSet = new Set();
+        for(let i = 0; i < this.items.length; i++){
+            if(set.has(this.items[i])){
+                tempSet.add(this.items[i]);
+            }
+        }
+        return tempSet;
+    }
+    isSubsetOf(set = []){
+        if(this.size() > set.size()) return false;
+        this.items.forEach*(item => {
+            if(!set.has(item)) return false;
+        });
+        return true;
+    }
+}
+
+let set = new Set(),
+    arr = ['鼠', '牛', '虎', '兔', '龙', '蛇', '马', '羊', '猴'];
+arr.forEach(item => {
+    set.add(item);
+});
+console.log(set.show()); // 鼠 牛 虎 兔 龙 蛇 马 羊 猴
+console.log(set.has('猪')); // false
+console.log(set.size()); // 9
+set.remove('鼠');
+console.log(set.show()); // 牛 虎 兔 龙 蛇 马 羊 猴
+let setAnother = new Set(),
+    anotherArr = ['马', '羊', '猴', '鸡', '狗', '猪'];
+anotherArr.forEach(item => {
+    setAnother.add(item);
+});
+console.log(set.union(setAnother).show()); // 牛 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
+console.log(set.intersect(setAnother).show()); // 马 羊 猴
+console.log(set.isSubsetOf(setAnother)); // false
+```
+
+### 后话
+
+> 文章中的一些案例来自coderwhy的数据结构和算法系列文章，感谢其允许授权
+ 
+![author_wechat_permission](https://img-fe.ggwan.com/images/a3198fa0bca62f-1272x1008.png)
+ 
+ > 文章首发
+ 
+ > 更多内容 https://github.com/reng99/blogs
+ 
+### 参考
+
+- [coderwhy的数据结构和算法系列文章](https://www.jianshu.com/p/38853c044156)
+
+- 《数据结构与算法JavaScript描述》
 
