--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -202,9 +202,11 @@ console.log(stack.size()); // 8
 
 ⚠️ 注意：我们栈这里的push和pop要和数组方法的push和pop方法区分下。
 
-> 有待补充执行环境文章
+说到**栈**，这也让我想到了翻译的一篇文章[JS的执行上下文和环境栈是什么?](https://juejin.im/post/5c855410e51d45555e2626fd)，感兴趣的话可以戳进去看下。
 
 ### 队列
+
+> 整理的内容走到了这里
 
 > 此处应该有图片和相关的队列说明
 
@@ -548,7 +550,7 @@ console.log(set.isSubsetOf(setAnother)); // false
 
 ### 后话
 
-> 文章中的一些案例来自coderwhy的数据结构和算法系列文章，感谢其允许授权
+> 文章中的一些案例来自coderwhy的数据结构和算法系列文章，感谢其授权
  
 ![author_wechat_permission](https://img-fe.ggwan.com/images/a3198fa0bca62f-1272x1008.png)
  
