temp: structure first 50%

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -206,9 +206,9 @@ console.log(stack.size()); // 8
 
 ### 队列
 
-> 整理的内容走到了这里
+**队列**是一种先进先出（FIFO）的受限的线性表。受限体现在允许在表的前端（front）进行操作删除，在表的末尾（rear）进行插入【优先队列这些排除在外】。
 
-> 此处应该有图片和相关的队列说明
+![queue_demo](https://img-fe.ggwan.com/images/4c2fafc15894d8-1618x498.png)
 
 代码走一遍：
 
@@ -262,7 +262,28 @@ console.log(queue.print()); // 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
 
 ### 链表
 
-> 此处应该有相关的图片和说明文字
+在进入正题之前，我们先来聊聊数组的优缺点。
+
+**优点：**
+
+- 要存储多个元素，比较常用
+- 访问便捷，使用[index]即可
+
+**缺点：**
+
+- 数组的创建通常需要申请一段连续的内存空间，并且大小是固定的（大多数的编程语言数组都是固定的），所以在进行扩容的时候难以掌控。（一般情况下，申请一个更大的数组，会是之前的倍数，比如两倍。然后，再将原数组中的元素复制过去）
+- 插入数据越是靠前，其成本很高，因为需要进行大量元素的位移。
+
+相对数组，链表亦可以存储多个元素，而且存储的元素在内容中不必是连续的空间；在插入和删除数据时，[时间复杂度](https://github.com/reng99/blogs/issues/5)可以达到O(1)。在查找的元素的时候，还是需要从头开始遍历的，比数组在知道下表的情况下要快，但是数组如果不确定下标的话，那就另说了...
+
+![train](https://img-fe.ggwan.com/images/4fab9eb1353414-1024x295.png)
+
+上面的火车图已经很形象的表示了普通链表的结构，我们再来形象化一下：
+
+> 图片有待补充...(在number上完善)
+
+**链表**是由一组节点组成的集合。每个节点都使用一个对象的引用指向它的后继。如上图。下面用代码实现下：
+
 
 ```typescript
 // 链表
