--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -397,7 +397,11 @@ console.log(linkedlist.display()); // 牛 虎
 
 ### 字典
 
-> 此处应该有详细的文字说明并配上图片
+**字典**的主要特点是键值一一对应的关系。可以比喻成我们学习中查不同语言翻译的`字典`。这里字典的键（key）理论上是可以使用任意的内容，但是还是建议语意化一点，比如下面的十二生肖图：
+
+> 这里有待补充字典的图
+
+
 
 ```typescript
 class Dictionary {
@@ -471,7 +475,9 @@ console.log(dictionary.clear().size()); // 0
 
 ### 集合
 
-> 相关的文字说明和图片啦
+**集合**通常是由一组无序的，不能重复的元素构成。 一些常见的集合操作如图：
+
+> 这里补充集合的图
 
 es6中已经封装好了可用的[Set类](http://es6.ruanyifeng.com/#docs/set-map)。
 
@@ -540,6 +546,11 @@ class Set {
         }
         return tempSet;
     }
+    /**
+     * @method isSubsetOf 【A】是【B】的子集❓
+     * @param { Array } set 数组集合
+     * @return { Boolean } 返回真假值
+     */
     isSubsetOf(set = []){
         if(this.size() > set.size()) return false;
         this.items.forEach*(item => {
