temp: begin binary tree

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -2,6 +2,8 @@
 
 这个系列文章分为上下两章，使用的是javascript语言进行辅助，毕竟自己是前端切图仔。第一章讲的是基本的数据结构--对相关的数据项进行组织的特殊架构。
 
+> 这里需要补充数据结构的定义
+
 讲到数据结构，我们都会谈到线性结构和非线性结构。
 
 **1.线性结构**是一个有序数据元素的集合。它应该满足下面的特征：
@@ -687,9 +689,64 @@ hashtable.show();
 ![open_link_method](https://img-fe.ggwan.com/images/bd2373dd1028ce-1234x542.png)
 
 
-### 二叉树
+### 二叉查找树
 
-> 有待补充...
+- 树的定义：
+
+	- 树（Tree）：`n(n >= 0)`个节点构成的有限集合。
+		- 当`n = 0`时，称为空树；
+		- 对任意一棵空树`(n > 0)`，它具备以下性质：
+		- 树中有一个称为**根(Root)**的特殊节点，用`r(root)`表示；
+		- 其余节点可分为`m(m > 0)`个互不相交的有限集`T1,T2,...Tm`，其中每个集合本省又是一棵树，称为原来树的**子树（SubTree）**
+
+	- 注意：
+		- 子树之间`不可以相交`；
+		- 除了根节点外，每个节点有且仅有一个父节点；
+		- 一个`N`个节点的树有`N-1`条边。
+
+- 树的术语：
+
+	- 节点的度（Degree）：节点的子树个数。
+	- 树的度：树的所有节点中最大的度数（树的度通常为节点个数的`N-1`）。
+	- 叶节点（Leaf）：度为`0`的节点（也称叶子节点）。
+	- 父节点（Parent）：有子树的节点是其子树的父节点。
+	- 子节点（Child）：若`A`节点是`B`节点的父节点，则称`B`节点是`A`节点的子节点。
+	- 兄弟节点（Sibling）：具有同一个父节点的各节点彼此是兄弟节点。
+	- 路径和路径长度：从节点`n1`到`nk`的路径为一个节点序列`n1,n2,n3,...,nk`，`ni`是`ni+1`的父节点。路径所包含边的个数为路径长度。
+	- 节点的层次（Level）：规定根节点在`第0层`，它的子节点是`第1层`，子节点的子节点是`第2层`，以此类推。
+	- 树的深度（Depth）：树中所有节点中的最大层次是这棵树的深度（因为上面是从第0层开始，深度 = 第最大层数 + 1）
+
+如下图：
+
+![tree_intro](https://img-fe.ggwan.com/images/e98fe35827628a-1462x742.png)
+
+- 二叉树的定义：
+
+	- 二叉树可以为空，也就是没有节点
+	- 二叉树若不为空，则它是由根节点和称为其左子树`TL`和右子树`RT`的两个不相交的二叉树组成
+	- 二叉树每个节点的子节点不允许超过`两个`
+
+- 二叉树的五种形态：
+
+	- 空
+	- 只有根节点
+	- 只有左子树
+	- 只有右子树
+	- 左右子树均有
+
+对应下图（从左至右）：
+
+![five_style_binary_tree](https://img-fe.ggwan.com/images/d62b5b4649083b-1410x414.png)
+
+我们接下来要讲的是**二叉查找树（BST，Binary Search Tree）**。**二叉查找树**，也称二叉搜索树或二叉排序树，是一种特殊的二叉树，相对值较`小`的值保存在`左`节点中，较`大`的值保存在`右`节点中。特殊的结构能够快速的进行查找、插入和删除数据。下面我们来实现下：
+
+```typescript
+
+```
+
+### 图
+
+> 有待补充
 
 ### 后话
 
