temp: complete binary tree

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -741,12 +741,189 @@ hashtable.show();
 我们接下来要讲的是**二叉查找树（BST，Binary Search Tree）**。**二叉查找树**，也称二叉搜索树或二叉排序树，是一种特殊的二叉树，相对值较`小`的值保存在`左`节点中，较`大`的值保存在`右`节点中。特殊的结构能够快速的进行查找、插入和删除数据。下面我们来实现下：
 
 ```typescript
+// 二叉查找树
+// 辅助节点类
+class Node {
+    constructor(data, left, right){
+        this.data = data;
+        this.left = left;
+        this.right = right;
+    }
+    // 展示节点信息
+    show(){
+        return this.data;
+    }
+}
+class BST {
+    constructor(){
+        this.root = null;
+    }
+    // 插入数据
+    insert(data){
+        let n = new Node(data, null, null);
+        if(this.root == null){
+            this.root = n;
+        }else{
+            let current = this.root,
+                parent = null;
+            while(true){
+                parent = current;
+                if(data < current.data){
+                    current = current.left;
+                    if(current == null){
+                        parent.left = n;
+                        break;
+                    }
+                }else{
+                    current = current.right;
+                    if(current == null){
+                        parent.right = n;
+                        break;
+                    }
+                }
+            }
+        }
+        return this;
+    }
+    // 中序遍历
+    inOrder(node){
+        if(!(node == null)){
+            this.inOrder(node.left);
+            console.log(node.show());
+            this.inOrder(node.right);
+        }
+    }
+    //   先序遍历
+    preOrder(node){
+        if(!(node == null)){
+            console.log(node.show());
+            this.preOrder(node.left);
+            this.preOrder(node.right);
+        }
+    }
+    // 后序遍历
+    postOrder(node){
+        if(!(node == null)){
+            this.postOrder(node.left);
+            this.postOrder(node.right);
+            console.log(node.show());
+        }
+    }
+    // 获取最小值
+    getMin(){
+        let current = this.root;
+        while(!(current.left == null)){
+            current = current.left;
+        }
+        return current.data;
+    }
+    // 获取最大值
+    getMax(){
+        let current = this.root;
+        while(!(current.right == null)){
+            current = current.right;
+        }
+        return current.data;
+    }
+    // 查找给定的值
+    find(data){
+        let current = this.root;
+        while(current != null){
+            if(current.data == data){
+                return current;
+            }else if(data < current.data){
+                current = current.left;
+            }else{
+                current = current.right;
+            }
+        }
+        return null;
+    }
+    // 移除给定的值
+    remove(data){
+        root = this.removeNode(this.root, data);
+        return this;
+    }
+    // 移除给定值的辅助函数
+    removeNode(node, data){
+        if(node == null){
+            return null;
+        }
+        if(data == node.data){
+            // 叶子节点
+            if(node.left == null && node.right == null){
+                return null; // 此节点置空
+            }
+            // 没有左子树
+            if(node.left == null){
+                return node.right;
+            }
+            // 没有右子树
+            if(node.right == null){
+                return node.left;
+            }
+            // 有两个子节点的情况
+            let tempNode = this.getSmallest(node.right); // 获取右子树
+            node.data = tempNode.data; // 将其右子树的最小值赋值给删除的那个节点值
+            node.right = this.removeNode(node.right, tempNode.data); // 删除指定节点的下的最小值，也就是置其为空
+            return node;
+        }else if(data < node.data){
+            node.left = this.removeNode(node.left, data);
+            return node;
+        }else{
+            node.right = this.removeNode(node.right, data);
+            return node;
+        }
+    }
+    // 获取给定节点下的二叉树最小值的辅助函数
+    getSmallest(node){
+        if(node.left == null){
+            return node;
+        }else{
+            return this.getSmallest(node.left);
+        }
+    }
+}
 
+let bst = new BST();
+bst.insert(56).insert(22).insert(10).insert(30).insert(81).insert(77).insert(92);
+bst.inOrder(bst.root); // 10, 22, 30, 56, 77, 81, 92
+console.log('--中序和先序遍历分割线--');
+bst.preOrder(bst.root); // 56, 22, 10, 30, 81, 77, 92
+console.log('--先序和后序遍历分割线--');
+bst.postOrder(bst.root); // 10, 30, 22, 77, 92, 81, 56
+console.log('--后序遍历和获取最小值分割线--');
+console.log(bst.getMin()); // 10
+console.log(bst.getMax()); // 92
+console.log(bst.find(22)); // Node { data: 22, left: Node { data: 10, left: null, right: null }, right: Node { data: 30, left: null, right: null } }
+// 我们删除节点值为22，然后用先序的方法遍历，如下
+console.log('--移除22的分割线--')
+console.log(bst.remove(22).inOrder(bst.root)); // 10, 30, 56, 77, 81, 92
 ```
+
+看了上面的代码之后，你是否有些懵圈呢？我们借助几张图来了解下，或许你就清晰了。
+
+在遍历的时候，我们分为三种遍历方法--先序遍历，中序遍历和后序遍历：
+
+![travel_tree](https://img-fe.ggwan.com/images/450c7c9de95ead-1360x712.png)
+
+删除节点是一个比较复杂的操作，考虑的情况比较多：
+
+- 该节点没有叶子节点的时候，直接将该节点置空；
+- 该节点只有左子树，直接将该节点赋予左子树
+- 该节点只有右子树，直接将该节点赋予右子树
+- 该节点左右子树都有，那么又有两种方法可以处理
+	- 方案一：从待删除节点的`左`子树找节点值`最大`的节点A，替换待删除节点，并删除节点A
+	- 方案二：从待删除节点的`右`子树找节点值`最小`的节点A，替换待删除节点，并删除节点A【👆上面的代码示例中就是这种方案实现】
+
+删除两个节点的图解如下：
+
+![remove_tree_node](https://img-fe.ggwan.com/images/2c8f62b87e2e44-1210x882.png)
+
 
 ### 图
 
-> 有待补充
+**图**由边的集合及顶点的集合组成。
 
 ### 后话
 
