temp: init graph structure

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -925,6 +925,39 @@ console.log(bst.remove(22).inOrder(bst.root)); // 10, 30, 56, 77, 81, 92
 
 **图**由边的集合及顶点的集合组成。
 
+我们来了解下图的相关术语：
+
+- 顶点：图中的一个节点。
+- 边：表示顶点和顶点直接的连线。
+- 相邻顶点：由一条边连接在一起的顶点称为相邻顶点。
+- 度：一个顶点的度是相邻顶点的数量。比如`0`顶点和其它两个顶点相连，`0`顶点的度就是`2`
+- 路径：路径是顶点`v1,v2...,vn`的一个连续序列。
+	- 简单路径：简单路径要求不包含重复的顶点。
+	- 回路：第一个顶点和最后一个顶点相同的路径称为回路。
+- 有向图和无向图
+	- 有向图表示图中的`边`是`有`方向的。
+	- 无向图表示图中的`边`是`无`方向的。
+- 带权图和无权图
+	- 带权图表示图中的边`有权重`。
+	- 无权图表示图中的边`无权重`。
+
+如下图：
+
+> 这里补充对上面概念的说明图
+
+图可以用于现实中的很多系统建模，比如：
+
+- 对交通流量建模
+	- 顶点可以表示街道的十字路口, 边可以表示街道.
+	- 加权的边可以表示限速或者车道的数量或者街道的距离.
+	- 建模人员可以用这个系统来判定最佳路线以及最可能堵车的街道.
+
+图既然这么方便，我们来用代码实现下：
+
+```javascript
+
+```
+
 ### 后话
 
 > 文章中的一些案例来自coderwhy的数据结构和算法系列文章，感谢其授权
