temp: graph structure

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -943,7 +943,7 @@ console.log(bst.remove(22).inOrder(bst.root)); // 10, 30, 56, 77, 81, 92
 
 如下图：
 
-> 这里补充对上面概念的说明图
+![graph_concept_intro](https://img-fe.ggwan.com/images/80d4235ee16366-1070x840.png)
 
 图可以用于现实中的很多系统建模，比如：
 
@@ -957,6 +957,8 @@ console.log(bst.remove(22).inOrder(bst.root)); // 10, 30, 56, 77, 81, 92
 ```javascript
 
 ```
+
+![graph_search](https://img-fe.ggwan.com/images/89477de42bba35-1034x1030.png)
 
 ### 后话
 
