temp: finish graph structure

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -955,8 +955,101 @@ console.log(bst.remove(22).inOrder(bst.root)); // 10, 30, 56, 77, 81, 92
 图既然这么方便，我们来用代码实现下：
 
 ```javascript
+// 图
+class Graph{
+    constructor(v){
+        this.vertices = v; // 顶点个数
+        this.edges = 0; // 边的个数
+        this.adj = []; // 邻接表或邻接表数组
+        this.marked = []; // 存储顶点是否被访问过的标识
+        this.init();
+    }
+    init(){
+        for(let i = 0; i < this.vertices; i++){
+            this.adj[i] = [];
+            this.marked[i] = false;
+        }
+    }
+    // 添加边
+    addEdge(v, w){
+        this.adj[v].push(w);
+        this.adj[w].push(v);
+        this.edges++;
+        return this;
+    }
+    // 展示图
+    showGraph(){
+        for(let i = 0; i < this.vertices; i++){
+            for(let j = 0; j < this.vertices; j++){
+                if(this.adj[i][j] != undefined){
+                    console.log(i +' => ' + this.adj[i][j]);
+                }
+            }
+        }
+    }
+    // 深度优先搜索
+    dfs(v){
+        this.marked[v] = true;
+        if(this.adj[v] != undefined){
+            console.log("visited vertex: " + v);
+        }
+        this.adj[v].forEach(w => {
+            if(!this.marked[w]){
+                this.dfs(w);
+            }
+        })
+    }
+    // 广度优先搜索
+    bfs(v){
+        let queue = [];
+        this.marked[v] = true;
+        queue.push(v); // 添加到队尾
+        while(queue.length > 0){
+            let v = queue.shift(); // 从对首移除
+            if(v != undefined){
+                console.log("visited vertex: " + v);
+            }
+            this.adj[v].forEach(w => {
+                if(!this.marked[w]){
+                    this.marked[w] = true;
+                    queue.push(w);
+                }
+            })
+        }
+    }
+}
 
+let graphFirstInstance = new Graph(5);
+graphFirstInstance.addEdge(0, 1).addEdge(0, 2).addEdge(1, 3).addEdge(2, 4);
+graphFirstInstance.showGraph();
+// 0 => 1
+// 0 => 2
+// 1 => 0
+// 1 => 3
+// 2 => 0
+// 2 => 4
+// 3 => 1
+// 4 => 2
+// ❓为什么会出现这种数据呢？它对应的图是什么呢？可以思考🤔下，动手画画图什么的
+console.log('--展示图和深度优先搜索的分隔线--');
+graphFirstInstance.dfs(0); // 从顶点 0 开始的深度搜索
+// visited vertex: 0
+// visited vertex: 1
+// visited vertex: 3
+// visited vertex: 2
+// visited vertex: 4
+console.log('--深度优先搜索和广度优先搜索的分隔线--');
+let graphSecondInstance = new Graph(5);
+graphSecondInstance.addEdge(0, 1).addEdge(0, 2).addEdge(1, 3).addEdge(2, 4);
+graphSecondInstance.bfs(0); // 从顶点 0 开始的广度搜索
+// visited vertex: 0
+// visited vertex: 1
+// visited vertex: 2
+// visited vertex: 3
+// visited vertex: 4
 ```
+
+对于搜索图，在上面我们介绍了**深度优先搜索 - DFS（Depth First Search）**和**广度优先搜索 - BFS（Breadth First Search）**，结合下面的图再回头看下上面的代码，你会更加容易理解这两种搜索图的方式。
 
 ![graph_search](https://img-fe.ggwan.com/images/89477de42bba35-1034x1030.png)
 
@@ -966,7 +1059,7 @@ console.log(bst.remove(22).inOrder(bst.root)); // 10, 30, 56, 77, 81, 92
  
 ![author_wechat_permission](https://img-fe.ggwan.com/images/a3198fa0bca62f-1272x1008.png)
  
- > 文章首发
+ > 文章首发 有待确定
  
  > 更多内容 https://github.com/reng99/blogs
  
