temp: add structure concept

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -2,7 +2,7 @@
 
 这个系列文章分为上下两章，使用的是javascript语言进行辅助，毕竟自己是前端切图仔。第一章讲的是基本的数据结构--对相关的数据项进行组织的特殊架构。
 
-> 这里需要补充数据结构的定义
+**数据结构**是计算机存储、组织数据的方式。**数据结构**是指相互直接存在一种或多种特殊关系的数据元素的集合。通常情况下，精心选择的数据结构可以带来更高的运行或者存在销量。作为一名程序猿，了解下数据结构还是有必要的，怎么说呢？可以参考我这篇文章[【译】编程不容易](https://juejin.im/post/5c82a9c66fb9a049b82b43a3)的`性能和优化`部分内容。
 
 讲到数据结构，我们都会谈到线性结构和非线性结构。
 
