temp: ts  marked change to js

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -35,18 +35,18 @@ arr.forEach((item, index) => {
 	console.log(`[ ${index} ] => ${item}`);
 });
 
-# [ 0 ] => 鼠
-# [ 1 ] => 牛
-# [ 2 ] => 虎
-# [ 3 ] => 兔
-# [ 4 ] => 龙
-# [ 5 ] => 蛇
-# [ 6 ] => 马
-# [ 7 ] => 羊
-# [ 8 ] => 猴
-# [ 9 ] => 鸡
-# [ 10 ] => 狗
-# [ 11 ] => 猪
+// [ 0 ] => 鼠
+// [ 1 ] => 牛
+// [ 2 ] => 虎
+// [ 3 ] => 兔
+// [ 4 ] => 龙
+// [ 5 ] => 蛇
+// [ 6 ] => 马
+// [ 7 ] => 羊
+// [ 8 ] => 猴
+// [ 9 ] => 鸡
+// [ 10 ] => 狗
+// [ 11 ] => 猪
 ```
 
 我们可以在数组的任意位置插入和删除数据，常用的属性和一些方法如下，直接调用相关的方法就可以实现。这里不做演示～
@@ -156,7 +156,7 @@ console.log(arr.reduce(reducer, 5)); // 15
 
 我们实际上写一下，熟悉一下栈：
 
-```typescript
+```javascript
 class Stack {
     constructor(){
         this.items = [];
@@ -214,7 +214,7 @@ console.log(stack.size()); // 8
 
 代码走一遍：
 
-```typescript
+```javascript
 // 队列
 class Queue {
     constructor(){
@@ -276,7 +276,7 @@ console.log(queue.print()); // 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
 - 数组的创建通常需要申请一段连续的内存空间，并且大小是固定的（大多数的编程语言数组都是固定的），所以在进行扩容的时候难以掌控。（一般情况下，申请一个更大的数组，会是之前的倍数，比如两倍。然后，再将原数组中的元素复制过去）
 - 插入数据越是靠前，其成本很高，因为需要进行大量元素的位移。
 
-相对数组，链表亦可以存储多个元素，而且存储的元素在内容中不必是连续的空间；在插入和删除数据时，[时间复杂度](https://github.com/reng99/blogs/issues/5)可以达到O(1)。在查找的元素的时候，还是需要从头开始遍历的，比数组在知道下表的情况下要快，但是数组如果不确定下标的话，那就另说了...
+相对数组，链表亦可以存储多个元素，而且存储的元素在内容中不必是连续的空间；在插入和删除数据时，[时间复杂度](https://juejin.im/post/5c3405a3518825253315d61c)可以达到O(1)。在查找的元素的时候，还是需要从头开始遍历的，比数组在知道下表的情况下要快，但是数组如果不确定下标的话，那就另说了...
 
 ![train](https://img-fe.ggwan.com/images/4fab9eb1353414-1024x295.png)
 
@@ -287,7 +287,7 @@ console.log(queue.print()); // 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
 **链表**是由一组节点组成的集合。每个节点都使用一个对象的引用指向它的后继。如上图。下面用代码实现下：
 
 
-```typescript
+```javascript
 // 链表
 class Node {
     constructor(element){
@@ -403,7 +403,7 @@ console.log(linkedlist.display()); // 牛 虎
 
 ![dictionary_demo](https://img-fe.ggwan.com/images/4be75387a07a8c-946x1160.png)
 
-```typescript
+```javascript
 class Dictionary {
     constructor(){
         this.items = {};
@@ -479,9 +479,9 @@ console.log(dictionary.clear().size()); // 0
 
 ![set_demo](https://img-fe.ggwan.com/images/8f86a8fe9eff72-1848x1314.png)
 
-es6中已经封装好了可用的[Set类](http://es6.ruanyifeng.com/#docs/set-map)。
+es6中已经封装好了可用的[Set类](http://es6.ruanyifeng.com/#docs/set-map)。感兴趣的的话自行查看。
 
-```typescript
+```javascript
 // 集合
 class Set {
     constructor(){
@@ -613,7 +613,7 @@ console.log(set.isSubsetOf(setAnother)); // false
 
 结合下面的代码，也许你会更容易理解：
 
-```typescript
+```javascript
 // 哈希表
 class HashTable {
     constructor(){
@@ -740,7 +740,7 @@ hashtable.show();
 
 我们接下来要讲的是**二叉查找树（BST，Binary Search Tree）**。**二叉查找树**，也称二叉搜索树或二叉排序树，是一种特殊的二叉树，相对值较`小`的值保存在`左`节点中，较`大`的值保存在`右`节点中。特殊的结构能够快速的进行查找、插入和删除数据。下面我们来实现下：
 
-```typescript
+```javascript
 // 二叉查找树
 // 辅助节点类
 class Node {
@@ -1062,6 +1062,10 @@ graphSecondInstance.bfs(0); // 从顶点 0 开始的广度搜索
  > 文章首发 有待确定
  
  > 更多内容 https://github.com/reng99/blogs
+ 
+ > 绘图软件 [Numbers](https://www.apple.com/numbers/)
+ 
+ > 演示代码存放地址 -- [数据结构文件夹](#) 进入`structure`目录可以直接 `node + filename` 运行
  
 ### 参考
 
