--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -278,11 +278,9 @@ console.log(queue.print()); // 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
 
 相对数组，链表亦可以存储多个元素，而且存储的元素在内容中不必是连续的空间；在插入和删除数据时，[时间复杂度](https://juejin.im/post/5c3405a3518825253315d61c)可以达到O(1)。在查找的元素的时候，还是需要从头开始遍历的，比数组在知道下表的情况下要快，但是数组如果不确定下标的话，那就另说了...
 
-![train](https://img-fe.ggwan.com/images/4fab9eb1353414-1024x295.png)
+我们使用十二生肖来了解下链表：
 
-上面的火车图已经很形象的表示了普通链表的结构，我们再来形象化一下：
-
-![linklist_demo](https://img-fe.ggwan.com/images/76b0f37047ddcb-1746x880.png)
+![linklist_demo](https://img-fe.ggwan.com/images/aa0d46b05f35cf-1786x870.png)
 
 **链表**是由一组节点组成的集合。每个节点都使用一个对象的引用指向它的后继。如上图。下面用代码实现下：
 
@@ -401,7 +399,7 @@ console.log(linkedlist.display()); // 牛 虎
 
 **字典**的主要特点是键值一一对应的关系。可以比喻成我们学习中查不同语言翻译的`字典`。这里字典的键（key）理论上是可以使用任意的内容，但是还是建议语意化一点，比如下面的十二生肖图：
 
-![dictionary_demo](https://img-fe.ggwan.com/images/4be75387a07a8c-946x1160.png)
+![dictionary_demo](https://img-fe.ggwan.com/images/da2da5bbc4ed25-708x856.png)
 
 ```javascript
 class Dictionary {
@@ -674,7 +672,7 @@ hashtable.show();
 // 问题又来了，那么应该如何解决这种被覆盖的冲突呢❓
 ```
 
-![hashtable_demo](https://img-fe.ggwan.com/images/c9757fb537f3c3-1056x2122.png)
+![hashtable_demo](https://img-fe.ggwan.com/images/da62f676339fc8-850x1592.png)
 
 那么，我们存储数据的时候，产生冲突的时候我们可以像下面这样解决：
 
@@ -1063,7 +1061,7 @@ graphSecondInstance.bfs(0); // 从顶点 0 开始的广度搜索
  
  > 更多内容 https://github.com/reng99/blogs
  
- > 绘图软件 [Numbers](https://www.apple.com/numbers/)
+ > 绘图软件 [Numbers](https://www.apple.com/numbers/)，本篇文章用到的[图片绘图稿](https://github.com/reng99/blogs/blob/master/src/structure/structure.numbers)感兴趣可以下载。
  
  > 演示代码存放地址 -- [数据结构文件夹](#) 进入`structure`目录可以直接 `node + filename` 运行
  
