--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -2,9 +2,13 @@
 
 ![structure-banner](https://img-fe.ggwan.com/images/a1fef41d6399fb-1636x860.png)
 
-这个系列文章分为上下两章，使用的是javascript语言进行辅助，毕竟自己是前端切图仔。第一章讲的是基本的数据结构--对相关的数据项进行组织的特殊架构。
+导师计划已经开始一个月了，自己的讲解的课程选择了**数据结构和算法**。这个系列的讲解分为`上下两章`，`javascript`语言辅助。本篇文章为上章，涉及的内容是基本的数据结构。在日本，晚上没事安排@…@，时间还是充足的...，于是自己整理下本系列知识点的上章内容。
 
-**数据结构**是计算机存储、组织数据的方式。**数据结构**是指相互直接存在一种或多种特殊关系的数据元素的集合。通常情况下，精心选择的数据结构可以带来更高的运行或者存在销量。作为一名程序猿，了解下数据结构还是有必要的，怎么说呢？可以参考我这篇文章[【译】编程不容易](https://juejin.im/post/5c82a9c66fb9a049b82b43a3)的`性能和优化`部分内容。
+![moiunt-Fuji](https://img-fe.ggwan.com/images/bea6c87837bffb-1440x1080.jpg)
+
+以下为正文：
+
+**数据结构**是计算机存储、组织数据的方式。**数据结构**是指相互直接存在一种或多种特殊关系的数据元素的集合。通常情况下，精心选择数据结构可以带来更高的运行或者存储效率。作为一名程序猿，更需要了解下数据结构。AND WHY？可以参考这篇文章[【译】编程不容易](https://juejin.im/post/5c82a9c66fb9a049b82b43a3)中的`性能和优化`部分内容。
 
 讲到数据结构，我们都会谈到线性结构和非线性结构。
 
@@ -17,7 +21,7 @@
 
 按照百度百科的定义，我们知道符合条件的数据结构就有栈、队列和其它。
 
-**2.非线性结构**其逻辑特征是一个节点元素可以有很多个直接前驱和多个直接后继。
+**2.非线性结构**其逻辑特征是一个节点元素可以有多个直接前驱或多个直接后继。
 
 那么，符合条件的数据结构就有图、树和其它。
 
@@ -29,7 +33,7 @@
 
 ![array_demo](https://img-fe.ggwan.com/images/9aa57ef9ad250b-1750x162.png)
 
-我们创建一个数组并打印出结果就一目了然了：
+我们来创建一个数组并打印出结果就一目了然了：
 
 ```javascript
 let arr = ['鼠', '牛', '虎', '兔', '龙', '蛇', '马', '羊', '猴', '鸡', '狗', '猪'];
@@ -51,7 +55,7 @@ arr.forEach((item, index) => {
 // [ 11 ] => 猪
 ```
 
-我们可以在数组的任意位置插入和删除数据，常用的属性和一些方法如下，直接调用相关的方法就可以实现。这里不做演示～
+数组中常用的属性和一些方法如下，直接调用相关的方法即可。这里不做演示～
 
 **常用的属性**
 
@@ -61,46 +65,46 @@ arr.forEach((item, index) => {
 
 - splice(index, howmany, item, ... itemx)
 
-	**splice()**方法是数组中最强大的方法。可以实现数组元素的添加、删除和替换。`index`参数为整数且必需，规定添加/删除项目的位置，使用负数可从数组结尾处规定位置；`howmany`参数为必需，要删除的项目数量，如果设置为 0，则不会删除项目；`item1, ... itemx`为可选，向数组添加新的项目。
+	**splice**方法自认为是数组中最强大的方法。可以实现数组元素的添加、删除和替换。参数`index`为整数且必需，规定添加/删除项目的位置，使用负数可从数组结尾处规定位置；参数`howmany`为必需，为要删除的项目数量，如果设置为 0，则不会删除项目；`item1, ... itemx`为可选，向数组添加新的项目。
 	
 - indexOf(searchValue, fromIndex)
 
-	**indexOf()**方法返回某个指定字符串值在数组中的位置。`searchValue`是查询的字符串；`fromIndex`是查询的开始位置，默认是0。如果查询不到，会返回-1。
+	**indexOf**方法返回某个指定字符串值在数组中的位置。`searchValue`是查询的字符串；`fromIndex`是查询的开始位置，默认是0。如果查询不到，会返回-1。
 	
 - concat(array1, ... arrayn)
 
-	**concat()**方法用于连接两个或者多个数组。
+	**concat**方法用于连接两个或者多个数组。
 	
 - push(newElement1, ... newElementN)
 
-	**push()**方法可向`数组的末尾`添加一个或者多个元素。
+	**push**方法可向`数组的末尾`添加一个或者多个元素。
 	
 - unshift(newElement1, ... newElementN)
 
-	**unshift()**方法可向`数组的开头`添加一个或者多个元素。
+	**unshift**方法可向`数组的开头`添加一个或者多个元素。
 	
 - pop()
 
-	**pop()**方法用于删除并返回`数组的最后一个元素`。
+	**pop**方法用于删除并返回`数组的最后一个元素`。
 	
 - shift()
 
-	**shift()**方法可以删除数组的`第一个元素`。
+	**shift**方法可以删除数组的`第一个元素`。
 	
 - reverse()
 
-	**reverse()**方法用于数组的反转
+	**reverse**方法用于数组的反转
 	
 - sort(sortFn)
 
-	**sort()**方法是对数组的元素排序。参数`sortFn`可选，其规定排序顺序，必须是函数。
+	**sort**方法是对数组的元素排序。参数`sortFn`可选，其规定排序顺序，必须是函数。
 	
 ```javascript
 let values = [0, 1, 5, 10, 15];
 values.sort();
 console.log(values); // [0, 1, 10, 15, 5]
 // 为什么会出现这种排序结果呢❓
-// 因为在忽略sortFn的情况下，元素会按照转换为的字符串的各个字符的Unicode位点进行排序如下
+// 因为在忽略sortFn的情况下，元素会按照转换为字符串的各个字符的Unicode位点进行排序，如下
 let equalValues = ['0', '1', '5', '10', '15'];
 equalValues.sort();
 console.log(equalValues); //  ["0", "1", "10", "15", "5"]
@@ -120,19 +124,19 @@ console.log(arr); // [15, 10, 5, 1, 0]
 
 - forEach(fn(currentValue, index, arr), thisValue)
 
-	**forEach()**方法用于调用数组的每个元素，并将元素传递给回调函数。参数`function(currentValue, index, arr){}`是一个回调函数。`thisValue`可选，传递给函数的值一般用 "this" 值，如果这个参数为空， "undefined" 会传递给 "this" 值。
+	**forEach**方法用于调用数组的每个元素，并将元素传递给回调函数。参数`function(currentValue, index, arr){}`是一个回调函数。`thisValue`可选，传递给函数的值一般用 "this" 值，如果这个参数为空， "undefined" 会传递给 "this" 值。
 
 - every(fn(currentValue, index, arr), thisValue)
 
-	**every()**方法用于检测数组中所有元素是否符合指定条件，如果数组中检测到有一个元素不满足，则整个表达式返回`false`，且剩余的元素不再检查。如果所有的元素都满足条件，则返回`true`。
+	**every**方法用于检测数组中所有元素是否符合指定条件，如果数组中检测到有一个元素不满足，则整个表达式返回`false`，且剩余的元素不再检查。如果所有的元素都满足条件，则返回`true`。
 	
 - some(fn(currentValue,index,arr),thisValue)
 
-	**some()**方法用于检测数组中元素是否满足指定条件。只有有一个符合就返回`true`，剩余的元素不再检查。如果所有元素都不符合条件，则返回`false`。
+	**some**方法用于检测数组中元素是否满足指定条件。只要有一个符合就返回`true`，剩余的元素不再检查。如果所有元素都不符合条件，则返回`false`。
 	
 - reduce(fn(accumulator, currentValue, currentIndex, arr), initialValue)
 
-	**reduce()**方法接收一个函数作为累加器，数组中的每个值（从左到右）开始缩减，最终为一个值。回调函数的四个参数的意义如下：`accumulator`，必需，累计器累计回调的返回值, 它是上一次调用回调时返回的累积值，或initialValue；`currentValue`，必需，数组中正在处理的元素；`currentIndex`,可选,数组中正在处理的当前元素的索引，如果提供了initialValue，则起始索引号为0，否则为1;`arr`,可选,当前元素所属的数组对象。`initialValue`，可选，传递给函数的初始值。
+	**reduce**方法接收一个函数作为累加器，数组中的每个值（从左到右）开始缩减，最终为一个值。回调函数的四个参数的意义如下：`accumulator`，必需，累计器累计回调的返回值, 它是上一次调用回调时返回的累积值，或initialValue；`currentValue`，必需，数组中正在处理的元素；`currentIndex`,可选,数组中正在处理的当前元素的索引，如果提供了initialValue，则起始索引号为0，否则为1;`arr`,可选,当前元素所属的数组对象。`initialValue`，可选，传递给函数的初始值。
 	
 ```javascript
 let arr = [1, 2, 3, 4];
@@ -147,16 +151,16 @@ console.log(arr.reduce(reducer, 5)); // 15
 
 ### 栈
 
-**栈**是一种后进先出(LIFO)线性表，是一种基于数组的数据结构。（ps：其实后面讲到数据结构的或多或少和数组有些影子）
+**栈**是一种后进先出(LIFO)线性表，是一种基于数组的数据结构。（ps：其实后面讲到的数据结构或多或少有数组的影子）
 
-- LIFO(last in first out)表示后进入的元素，第一个弹出栈空间。类似于自动餐托盘，最后放上去的托盘，往往先被拿出来使用。
+- LIFO(Last In First Out)表示后进先出，后进来的元素第一个弹出栈空间。类似于自动餐托盘，最后放上去的托盘，往往先被拿出来使用。
 - 仅允许在表的一端进行插入和移除元素。这一端被称为**栈顶**，相对地，把另一端称为**栈底**。如下图的标识。
-- 向一个栈插入新元素称作**进栈、入栈或压栈**，它是将新元素放在栈顶元素上面，使之成为新的栈顶元素。
+- 向一个栈插入新元素称作**进栈、入栈或压栈**，这是将新元素放在栈顶元素上面，使之成为新的栈顶元素。
 - 从一个栈删除元素又称为**出栈或退栈**，它是把栈顶元素删除掉，使其相邻的元素成为新的栈顶元素。
 
 ![stack_demo](https://img-fe.ggwan.com/images/3dc3756c0fa060-1550x508.png)
 
-我们实际上写一下，熟悉一下栈：
+我们代码写下，熟悉下栈：
 
 ```javascript
 class Stack {
@@ -204,20 +208,19 @@ console.log(stack.isEmpty()); // false
 console.log(stack.size()); // 8
 ```
 
-⚠️ 注意：我们栈这里的push和pop要和数组方法的push和pop方法区分下。
+⚠️ 注意：栈这里的push和pop方法要和数组方法的push和pop方法区分下。
 
 说到**栈**，这也让我想到了翻译的一篇文章[JS的执行上下文和环境栈是什么?](https://juejin.im/post/5c855410e51d45555e2626fd)，感兴趣的话可以戳进去看下。
 
 ### 队列
 
-**队列**是一种先进先出（FIFO）的受限的线性表。受限体现在允许在表的前端（front）进行操作删除，在表的末尾（rear）进行插入【优先队列这些排除在外】。
+**队列**是一种先进先出（FIFO）受限的线性表。受限体现在于其允许在表的前端（front）进行删除操作，在表的末尾（rear）进行插入【优先队列这些排除在外】操作。
 
 ![queue_demo](https://img-fe.ggwan.com/images/6039d1be3622f5-1606x512.png)
 
 代码走一遍：
 
 ```javascript
-// 队列
 class Queue {
     constructor(){
         this.items = [];
@@ -270,15 +273,15 @@ console.log(queue.print()); // 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
 
 **优点：**
 
-- 要存储多个元素，比较常用
-- 访问便捷，使用[index]即可
+- 存储多个元素，比较常用
+- 访问便捷，使用下标[index]即可访问
 
 **缺点：**
 
-- 数组的创建通常需要申请一段连续的内存空间，并且大小是固定的（大多数的编程语言数组都是固定的），所以在进行扩容的时候难以掌控。（一般情况下，申请一个更大的数组，会是之前的倍数，比如两倍。然后，再将原数组中的元素复制过去）
+- 数组的创建通常需要申请一段连续的内存空间，并且大小是固定的（大多数的编程语言数组都是固定的），所以在进行扩容的时候难以掌控。（一般情况下，申请一个更大的数组，会是之前数组的倍数，比如两倍。然后，再将原数组中的元素复制过去）
 - 插入数据越是靠前，其成本很高，因为需要进行大量元素的位移。
 
-相对数组，链表亦可以存储多个元素，而且存储的元素在内容中不必是连续的空间；在插入和删除数据时，[时间复杂度](https://juejin.im/post/5c3405a3518825253315d61c)可以达到O(1)。在查找的元素的时候，还是需要从头开始遍历的，比数组在知道下表的情况下要快，但是数组如果不确定下标的话，那就另说了...
+相对数组，链表亦可以存储多个元素，而且存储的元素在内容中不必是连续的空间；在插入和删除数据时，[时间复杂度](https://juejin.im/post/5c3405a3518825253315d61c)可以达到O(1)。在查找元素的时候，还是需要从头开始遍历的，比数组在知道下表的情况下要快，但是数组如果不确定下标的话，那就另说了...
 
 我们使用十二生肖来了解下链表：
 
@@ -399,7 +402,7 @@ console.log(linkedlist.display()); // 牛 虎
 
 ### 字典
 
-**字典**的主要特点是键值一一对应的关系。可以比喻成我们学习中查不同语言翻译的`字典`。这里字典的键（key）理论上是可以使用任意的内容，但是还是建议语意化一点，比如下面的十二生肖图：
+**字典**的主要特点是键值一一对应的关系。可以比喻成我们现实学习中查不同语言翻译的`字典`。这里字典的键（key）理论上是可以使用任意的内容，但还是建议语意化一点，比如下面的十二生肖图：
 
 ![dictionary_demo](https://img-fe.ggwan.com/images/da2da5bbc4ed25-708x856.png)
 
@@ -460,15 +463,16 @@ class Dictionary {
 }
 
 let dictionary = new Dictionary(),
-    arr = ['鼠', '牛', '虎', '兔', '龙', '蛇', '马', '羊', '猴', '鸡', '狗', '猪'];
-    arr.forEach((item, index) => {
-        dictionary.set('第'+(++index)+'生肖', item);
+    // 这里需要修改
+    arr = [{ key: 'mouse', value: '鼠'}, {key: 'ox', value: '牛'}, {key: 'tiger', value: '虎'}, {key: 'rabbit', value: '兔'}, {key: 'dragon', value: '龙'}, {key: 'snake', value: '蛇'}, {key: 'horse', value: '马'}, {key: 'sheep', value: '羊'}, {key: 'monkey', value: '猴'}, {key: 'chicken', value: '鸡'}, {key: 'dog', value: '狗'}, {key: 'pig', value: '猪'}];
+    arr.forEach(item => {
+        dictionary.set(item.key, item.value);
     });
-console.log(dictionary.keys()); // 第1生肖 第2生肖 第3生肖 第4生肖 第5生肖 第6生肖 第7生肖 第8生肖 第9生肖 第10生肖 第11生肖 第12生肖
+console.log(dictionary.keys()); // mouse ox tiger rabbit dragon snake horse sheep monkey chicken dog pig
 console.log(dictionary.values()); // 鼠 牛 虎 兔 龙 蛇 马 羊 猴 鸡 狗 猪
-console.log(dictionary.has('第5生肖')); // true
-console.log(dictionary.get('第3生肖')); // 虎
-console.log(dictionary.remove('第12生肖')); // true
+console.log(dictionary.has('dragon')); // true
+console.log(dictionary.get('tiger')); // 虎
+console.log(dictionary.remove('pig')); // true
 console.log(dictionary.size()); // 11
 console.log(dictionary.clear().size()); // 0
 ```
@@ -479,7 +483,7 @@ console.log(dictionary.clear().size()); // 0
 
 ![set_demo](https://img-fe.ggwan.com/images/8f86a8fe9eff72-1848x1314.png)
 
-es6中已经封装好了可用的[Set类](http://es6.ruanyifeng.com/#docs/set-map)。感兴趣的的话自行查看。
+es6中已经封装好了可用的[Set类](http://es6.ruanyifeng.com/#docs/set-map)。我们手动来写下相关的逻辑：
 
 ```javascript
 // 集合
@@ -589,8 +593,8 @@ console.log(set.isSubsetOf(setAnother)); // false
 **假如一家公司有1000个员工, 现在我们需要将这些员工的信息使用某种数据结构来保存起来。你会采用什么数据结构呢？**
 
 - 方案一：数组
-	- 按照顺序将所有员工信息依次存入一个长度为1000的数组中。每个员工的信息都保存在数组的某个位置上。
-	- 但是我们要查看某个具体员工的信息怎么办呢？一个个查找吗？不太好找。
+	- 按照顺序将所有员工信息依次存入一个长度为1000的数组中。每个员工的信息都保存在该数组的某个位置上。
+	- 但是我们要查看某个员工的信息怎么办呢？一个个查找吗？不太好找。
 	- 数组最大的优势是什么？通过下标值获取信息。
 	- 所以为了可以通过数组快速定位到某个员工，最好给员工信息中添加一个员工编号，而`编号`对应的就是员工的`下标值`。
 	- 当查找某个员工信息时，通过员工号可以快速定位到员工的信息位置。
@@ -609,7 +613,7 @@ console.log(set.isSubsetOf(setAnother)); // false
 
 那么散列表的原理和实现又是怎样的呢，我们来聊聊。
 
-我们的哈希表是基于数组完成的，我们从数组这里切入解析下。`数组可以通过下标直接定位到相应的空间`，哈希表的做法就是这种类似的实现。哈希表就是把`key(键)`通过一个固定的算法函数（此函数称为哈希函数/散列函数）转换成一个整型数字，然后就将该数字对数组长度进行**取余**，取余结果就当作数组的下标，将`value(值)`存储在以该数字为下标的数组空间里，而当使用哈希表进行查询的时候，就是再次使用哈希函数将`key`转换为对应的数组下标，并定位到该空间获取`value`。
+我们的哈希表是基于数组完成的，我们从数组这里切入解析下。`数组可以通过下标直接定位到相应的空间`，哈希表的做法就是类似的实现。哈希表把`key(键)`通过一个固定的算法函数（此函数称为哈希函数/散列函数）转换成一个整型数字，然后就将该数字对数组长度进行**取余**，取余结果就当作数组的下标，将`value(值)`存储在以该数字为下标的数组空间里，而当使用哈希表进行查询的时候，就是再次使用哈希函数将`key`转换为对应的数组下标，并定位到该空间获取`value`。
 
 结合下面的代码，也许你会更容易理解：
 
@@ -676,7 +680,7 @@ hashtable.show();
 
 ![hashtable_demo](https://img-fe.ggwan.com/images/da62f676339fc8-850x1592.png)
 
-那么，我们存储数据的时候，产生冲突的时候我们可以像下面这样解决：
+针对上面的问题，我们存储数据的时候，产生冲突的话我们可以像下面这样解决：
 
 **1. 线性探测法**
 
@@ -684,7 +688,7 @@ hashtable.show();
 
 **2. 开链法**
 
-当发生碰撞时，我们任然希望将`key（键）`存储到通过哈希函数产生的索引位置上，那么我们可以使用**开链法**。**开链法**是指实现哈希表底层的数组中，每个数组元素又是一个新的数组结构，比如另一个数组（这样结合起来就是二位数组了），链表等，这样就能存储多个键了。使用这种技术，即使两个`key（键）`散列后的值相同，依然是被保存在同样的位置，只不过它们是被保存在另一个数据结构上而已。以另一个数据结构是数组为例，存储的数据如下：
+但是，当发生碰撞时，我们任然希望将`key（键）`存储到通过哈希函数产生的索引位置上，那么我们可以使用**开链法**。**开链法**是指实现哈希表底层的数组中，每个数组元素又是一个新的数据结构，比如另一个数组（这样结合起来就是二位数组了），链表等，这样就能存储多个键了。使用这种技术，即使两个`key（键）`散列后的值相同，依然是被保存在同样的位置，只不过它们是被保存在另一个数据结构上而已。以另一个数据结构是数组为例，存储的数据如下：
 
 ![open_link_method](https://img-fe.ggwan.com/images/bd2373dd1028ce-1234x542.png)
 
@@ -738,7 +742,7 @@ hashtable.show();
 
 ![five_style_binary_tree](https://img-fe.ggwan.com/images/d62b5b4649083b-1410x414.png)
 
-我们接下来要讲的是**二叉查找树（BST，Binary Search Tree）**。**二叉查找树**，也称二叉搜索树或二叉排序树，是一种特殊的二叉树，相对值较`小`的值保存在`左`节点中，较`大`的值保存在`右`节点中。特殊的结构能够快速的进行查找、插入和删除数据。下面我们来实现下：
+我们接下来要讲的是**二叉查找树（BST，Binary Search Tree）**。**二叉查找树**，也称二叉搜索树或二叉排序树，是一种特殊的二叉树，相对值较`小`的值保存在`左`节点中，较`大`的值保存在`右`节点中。二叉查找树特殊的结构使它能够快速的进行查找、插入和删除数据。下面我们来实现下：
 
 ```javascript
 // 二叉查找树
@@ -901,7 +905,7 @@ console.log('--移除22的分割线--')
 console.log(bst.remove(22).inOrder(bst.root)); // 10, 30, 56, 77, 81, 92
 ```
 
-看了上面的代码之后，你是否有些懵圈呢？我们借助几张图来了解下，或许你就清晰了。
+看了上面的代码之后，你是否有些懵圈呢？我们借助几张图来了解下，或许你就豁然开朗了。
 
 在遍历的时候，我们分为三种遍历方法--先序遍历，中序遍历和后序遍历：
 
@@ -912,9 +916,9 @@ console.log(bst.remove(22).inOrder(bst.root)); // 10, 30, 56, 77, 81, 92
 - 该节点没有叶子节点的时候，直接将该节点置空；
 - 该节点只有左子树，直接将该节点赋予左子树
 - 该节点只有右子树，直接将该节点赋予右子树
-- 该节点左右子树都有，那么又有两种方法可以处理
-	- 方案一：从待删除节点的`左`子树找节点值`最大`的节点A，替换待删除节点，并删除节点A
-	- 方案二：从待删除节点的`右`子树找节点值`最小`的节点A，替换待删除节点，并删除节点A【👆上面的代码示例中就是这种方案实现】
+- 该节点左右子树都有，有两种方法可以处理
+	- 方案一：从待删除节点的`左`子树找节点值`最大`的节点A，替换待删除节点值，并删除节点A
+	- 方案二：从待删除节点的`右`子树找节点值`最小`的节点A，替换待删除节点值，并删除节点A【👆上面的示例代码中就是这种方案】
 
 删除两个节点的图解如下：
 
@@ -928,7 +932,7 @@ console.log(bst.remove(22).inOrder(bst.root)); // 10, 30, 56, 77, 81, 92
 我们来了解下图的相关术语：
 
 - 顶点：图中的一个节点。
-- 边：表示顶点和顶点直接的连线。
+- 边：表示顶点和顶点之间的连线。
 - 相邻顶点：由一条边连接在一起的顶点称为相邻顶点。
 - 度：一个顶点的度是相邻顶点的数量。比如`0`顶点和其它两个顶点相连，`0`顶点的度就是`2`
 - 路径：路径是顶点`v1,v2...,vn`的一个连续序列。
@@ -1058,10 +1062,6 @@ graphSecondInstance.bfs(0); // 从顶点 0 开始的广度搜索
 > 文章中的一些案例来自coderwhy的数据结构和算法系列文章，感谢其授权
  
 ![author_wechat_permission](https://img-fe.ggwan.com/images/a3198fa0bca62f-1272x1008.png)
- 
- > 文章首发 有待确定
- 
- > 更多内容 https://github.com/reng99/blogs
  
  > 绘图软件 [Numbers](https://www.apple.com/numbers/)，本篇文章用到的[图片绘图稿](https://github.com/reng99/blogs/blob/master/src/structure/structure.numbers)感兴趣可以下载。
  
