temp: complete structure

--- a/src/temporarily/数据结构和算法系列（1）.md
+++ b/src/temporarily/数据结构和算法系列（1）.md
@@ -1065,7 +1065,7 @@ graphSecondInstance.bfs(0); // 从顶点 0 开始的广度搜索
  
  > 绘图软件 [Numbers](https://www.apple.com/numbers/)，本篇文章用到的[图片绘图稿](https://github.com/reng99/blogs/blob/master/src/structure/structure.numbers)感兴趣可以下载。
  
- > 演示代码存放地址 -- [数据结构文件夹](#) 进入`structure`目录可以直接 `node + filename` 运行
+ > 演示代码存放地址 -- [数据结构文件夹](https://github.com/reng99/blogs/tree/master/src/structure) 进入`structure`目录可以直接 `node + filename` 运行
  
 ### 参考
 
