--- a/src/temporarily/导师计划--数据结构和算法系列（下）.md
+++ b/src/temporarily/导师计划--数据结构和算法系列（下）.md
@@ -11,15 +11,16 @@
 	- 对商品按照价格排序
 	- etc.
 
-排序算法又分为`简单排序`和`高级排序`。其中简单排序包括`冒泡排序、选择排序、插入排序和希尔排序`。高级排序包括`归并排序和快速排序`。
+排序算法又分为`简单排序`和`高级排序`。其中简单排序包括`冒泡排序、选择排序和插入排序`。高级排序包括`希尔排序、归并排序和快速排序`。
 
-> ⚠️ 有时候会将希尔排序纳入高级排序，因为其时间复杂度和前三个有所不同了。
 
 下面我们逐个排序来讲解下：
 
 #### 冒泡排序
 
-之所以叫**冒泡排序**，是因为使用这种排序算法时，数据值就会像气泡那样从数组的一段漂浮到另一端。假设正在将一组数字按照升序排列，较大的值会浮动在数组的右侧，而较小的值则会浮动到数组的左侧。产生这种冒泡的现象是因为算法会多次在数组中移动过，比较相邻的数据，当左侧值大于右侧值的时候将它们互换。（ps：后面讲到的排序如无说明，则默认为升序）
+之所以叫**冒泡排序**，是因为使用这种排序算法时，数据值就会像气泡那样从数组的一段漂浮到另一端。假设正在将一组数字按照升序排列，较大的值会浮动在数组的右侧，而较小的值则会浮动到数组的左侧。产生这种冒泡的现象是因为算法会多次在数组中移动过，比较相邻的数据，当左侧值大于右侧值的时候将它们互换。
+
+> ⚠️ 后面讲到的排序如无说明，则默认为升序
 
 比如下面的简单列表的例子。
 
@@ -165,8 +166,44 @@ insertionSort(){
 
 #### 希尔排序
 
-> 有待补充...
+**希尔排序**是基于插入排序的优化版，其核心理念与插入排序不同，希尔排序会首先比较距离较远的元素，而非相邻的元素。
 
+**原理：**
+
+希尔排序通过定义一个间隔序列来表示排序在排序过程中进行比较的元素之间有多远的间隔。我们可以动态定义间隔序列，不过对于大部分的实际应用场景，算法用到的间隔序列可以提前定义好。
+
+如下演示希尔排序中间隔序列是如何运行的：
+
+![how-hash-sort-run](https://img-fe.ggwan.com/images/685135f1671bb6-248x396.png)
+
+通过下面的gif图也许你会更好理解：
+
+![hash-sort-gif](https://img-fe.ggwan.com/images/41dfeaa89a5dcd-879x249.gif)
+
+实现的代码：
+
+```javascript
+shellSort(){
+    let temp,
+        j,
+        numElements = this.arr.length;
+    for(let g = 0; g < this.gaps.length; ++g){
+        for(let i = this.gaps[g]; i < numElements; ++i){
+            temp = this.arr[i];
+            for(j = i; j >= this.gaps[g] && this.arr[j - this.gaps[g]] > temp; j -= this.gaps[g]){ // 之前的已经拍好序的了
+                this.arr[j] = this.arr[j - this.gaps[g]];
+            }
+            this.arr[j] = temp; // 这里和上面的for循环是互换两个数据位置
+        }
+    }
+}
+```
+
+> 🤔思考：[6, 0, 2, 9, 3, 5, 8, 0, 5, 4] 间隔为3的排序结果是什么呢？
+
+#### 归并排序
+
+> 有待补充...
 
 ### 后话
 
