algorithm: merge sort 50%

--- a/src/temporarily/导师计划--数据结构和算法系列（下）.md
+++ b/src/temporarily/导师计划--数据结构和算法系列（下）.md
@@ -203,11 +203,30 @@ shellSort(){
 
 #### 归并排序
 
-> 有待补充...
+**原理:**
+
+把一系列的排好序的子序列合并成一个大的整数有序序列。从理论上讲，这个算法很容易实现。我们需要两个排好序的子数组，然后通过比较数据的大小，先从最小的数据开始插入，最后合并并得到第三个数组。然而，实际上操作的相当大的数据的时候，使用归并排序是很耗内存的，这里了解一下就行。
+
+![merge-sort-gif](https://img-fe.ggwan.com/images/fe850fa7dfebae-896x465.gif)
+
+实现归并排序一般分为两种方法，一种是**自顶向下**和**自底向上**的方法。
+
+上面的gif图就是**自顶向下**的方法，那么何为自顶向下呢？
+
+自顶向下的归并排序算法就是把数组元素不断的`二分`，直到子数组的元素个数为一个，因为这个时候子数组必定是有序的，然后再将两个有序的序列合并成一个新的有序序列，连个有序序列又可以合并成另一个新的有序序列，以此类推，直到合并一个有序的数组。如下图：
+
+![merge-sort-demo1](https://img-fe.ggwan.com/images/1366155a405132-1434x1330.png)
+
+
+自底向上：
+
+![merge-sort-demo2](https://img-fe.ggwan.com/images/b64609cfeeffeb-971x402.png)
 
 ### 后话
 
 > 有待补充...
+
+> 部分图片来自网络，侵删
 
 ### 参考
 
