algorithm: quicky sort 50%

--- a/src/temporarily/导师计划--数据结构和算法系列（下）.md
+++ b/src/temporarily/导师计划--数据结构和算法系列（下）.md
@@ -213,24 +213,58 @@ shellSort(){
 
 上面的gif图就是**自顶向下**的方法，那么何为自顶向下呢？
 
-自顶向下的归并排序算法就是把数组元素不断的`二分`，直到子数组的元素个数为一个，因为这个时候子数组必定是有序的，然后再将两个有序的序列合并成一个新的有序序列，连个有序序列又可以合并成另一个新的有序序列，以此类推，直到合并一个有序的数组。如下图：
+**自顶向下**的归并排序算法就是把数组元素不断的`二分`，直到子数组的元素个数为一个，因为这个时候子数组必定是有序的，然后再将两个有序的序列合并成一个新的有序序列，连个有序序列又可以合并成另一个新的有序序列，以此类推，直到合并一个有序的数组。如下图：
 
 ![merge-sort-demo1](https://img-fe.ggwan.com/images/1366155a405132-1434x1330.png)
 
 
-自底向上：
+**自底向上**的归并排序算法的思想是将数组先一个一个归并成两两有序的序列，两两有序的序列归并成四个四个有序的序列，以此类推，直到归并的长度`大于`整个数组的长度，此时整个数组有序。
+
+> ⚠️注意：数组按照归并长度划分，最后一个子数组可能不满足长度要求，这种情况就要特殊处理了。
 
 ![merge-sort-demo2](https://img-fe.ggwan.com/images/b64609cfeeffeb-971x402.png)
 
+#### 快速排序
+
+**快速排序**是处理大数据集最快的排序算法之一，时间复杂度 最好的情况也也是和归并排序一样，为O(nlogn)。
+
+**原理：**
+
+`快速排序`是一种**分而治之（分治）**的算法，通过递归的方式将数据依次分解为包含较小元素和较大元素的不同子序列，然后不断重复这个步骤，知道所有的数据都是有序的。
+
+可以更清晰的表达`快速排序算法`如下：
+
+1. 选择一个基准元素（pivot，枢纽），将列表分隔成两个子序列；
+2. 对列表重新排序，将所有小于基准值的元素放在基准值的前面，所有大于基准值的元素放在基准值的后面；
+3. 分别对较小元素的子序列和较大元素的子序列重复步骤 1 和 2。 
+
+![quicky-sort-gif](https://img-fe.ggwan.com/images/b379ccca7f70bd-876x307.gif)
+
+我们来用代码实现下：
+
+```javascript
+
+```
+
+以上介绍了六种排序的算法，当然还有很多其它的排序算法，你可以到[视频 | 手撕九大经典排序算法，看我就够了！](https://zhuanlan.zhihu.com/p/52884590)文章中查看。
+
 ### 后话
 
-> 有待补充...
+> 文章中的一些案例来自coderwhy的数据结构和算法系列文章，感谢其授权
+ 
+![author_wechat_permission](https://img-fe.ggwan.com/images/a3198fa0bca62f-1272x1008.png)
+
+ > 绘图软件 [Numbers](https://www.apple.com/numbers/)，本篇文章用到的[图片绘图稿](#)感兴趣可以下载。
 
 > 部分图片来自网络，侵删
 
 ### 参考
 
-[旧金山大学的David Galles教授实现的html5实现的排序动画](http://www.webhek.com/post/comparison-sort.html)
+- [旧金山大学的David Galles教授实现的html5实现的排序动画](http://www.webhek.com/post/comparison-sort.html)
+
+- [coderwhy的数据结构和算法系列文章](https://www.jianshu.com/p/38853c044156)
+
+- 《数据结构与算法JavaScript描述》
 
 
 
