algorithm: change link address

--- a/src/temporarily/导师计划--数据结构和算法系列（下）.md
+++ b/src/temporarily/导师计划--数据结构和算法系列（下）.md
@@ -254,7 +254,7 @@ shellSort(){
  
 ![author_wechat_permission](https://img-fe.ggwan.com/images/a3198fa0bca62f-1272x1008.png)
 
- > 绘图软件 [Numbers](https://www.apple.com/numbers/)，本篇文章用到的[图片绘图稿](#)感兴趣可以下载。
+ > 绘图软件 [Numbers](https://www.apple.com/numbers/)，本篇文章用到的[图片绘图稿](https://github.com/reng99/blogs/blob/master/src/algorithm/algorithm.numbers)感兴趣可以下载。
 
 > 部分图片来自网络，侵删
 
