algorithm: complete quick sort

--- a/src/temporarily/导师计划--数据结构和算法系列（下）.md
+++ b/src/temporarily/导师计划--数据结构和算法系列（下）.md
@@ -243,10 +243,36 @@ shellSort(){
 我们来用代码实现下：
 
 ```javascript
+// 快速排序
+    quickSort(){
+        this.arr = this.quickAux(this.arr);
+    }
 
+// aux函数 - 快排的辅助函数
+quickAux(arr){
+    let numElements = arr.length;
+    if(numElements == 0){
+        return [];
+    }
+    let left = [],
+        right = [],
+        pivot = arr[0]; // 取数组的第一个元素作为基准值
+    for(let i = 1; i < numElements; i++){
+        if(arr[i] < pivot){
+            left.push(arr[i]);
+        }else{
+            right.push(arr[i]);
+        }
+    }
+    return this.quickAux(left).concat(pivot, this.quickAux(right));
+}
 ```
 
 以上介绍了六种排序的算法，当然还有很多其它的排序算法，你可以到[视频 | 手撕九大经典排序算法，看我就够了！](https://zhuanlan.zhihu.com/p/52884590)文章中查看。
+
+### 搜索算法
+
+
 
 ### 后话
 
