algorithm: complete sort and search

--- a/src/temporarily/导师计划--数据结构和算法系列（下）.md
+++ b/src/temporarily/导师计划--数据结构和算法系列（下）.md
@@ -1,6 +1,6 @@
 ## 导师计划--数据结构和算法系列（下）
 
-数据结构和算法系列的课程分为上下两篇文章，上篇文章主要是讲解数据结构，可以戳[导师计划--数据结构和算法系列（上）](https://github.com/reng99/blogs/issues/14)进行了解。本篇文章主要讲解的是算法。辅助的语言还是`JavaScript`。
+数据结构和算法系列的课程分为上下两篇文章，上篇文章主要是讲解数据结构，可以戳[导师计划--数据结构和算法系列（上）](https://github.com/reng99/blogs/issues/14)进行了解。本篇文章主要讲解的是算法。辅助的语言还是`JavaScript`。POST的本篇文章主要是开阔我们在开发中的方式，发散下思维～
 
 ### 排序算法
 
@@ -272,6 +272,85 @@ quickAux(arr){
 
 ### 搜索算法
 
+在列表中查找数据又两种方式：**顺序查找**和**二分查找**。顺序查找适用于元素随机排列的列表；而二分查找适用于元素已排序的列表。二分查找效率更高，但是我们必须在进行查找之前花费额外的时间将列表中的元素排序。
+
+#### 顺序查找
+
+对于查找数据来说，最简单的就是从列表中的第一个元素开始对列表元素逐个进行判断，直到找到了想要的元素，或者直到列表结尾也没有找到。这种方法称为`顺序查找`或者`线性查找`。
+
+这种查找的代码实现方式很简单，如下：
+
+```javascript
+/*
+* @param { Array } arr 目标数组
+* @param { Number } data 要查找的数组
+* @return { Boolean } 是否查找成功
+**/
+function seqSearch(arr, data){
+	for(let i = 0; i < arr.length; i++){
+		if(arr[i] === data){
+			return true;
+		}
+	}
+	return false;
+}
+```
+
+当然，看到上面的代码，你也许会简化成下面的这样的代码：
+
+```javascript
+function seqSearch(arr, data){
+	return arr.indexOf(data) >= 0 ? true : false;
+}
+```
+
+实现的方式有多种，但是原理都是一样的，要从第一个元素开始遍历，有可能会遍历到最后一个元素都找不到要查找的元素。所以，这是一种**暴力查找技巧**的一种。
+
+那么，有什么更加高效的查找方法嘛？这就是我们接下来要讲的了。
+
+#### 二分查找算法
+
+在开始之前，我们来玩一个**猜数字游戏**：
+
+- 规则：在数字1-100之间，你朋友选择要猜的数字。你每猜一个数字，你的朋友将会作出下面三种回应的一种：
+	- 猜对了
+	- 猜大了
+	- 猜小了
+
+这个游戏很简单，如果我们使用二分查找的策略进行的话，我们经过短短的几次就可以知道我们要查找的数据。
+
+那么二分查找的原理是什么呢？
+
+二分查找又称为**折半查找**，对有序的列表每次进行对半查找。就是这么简单@～@！
+
+代码实现走一波：
+
+```javascript
+/*
+* @param { Array } arr 有序的数组 ⚠️注意：是有序的有序的有序的
+* @param { Number } data 要查找的数据
+* @return { Number } 返回查找到的位置，未查找到放回-1值
+**/
+function binSearch(arr, data){
+	let upperBound = arr.length -1,
+		 lowerBound = 0;
+	while(lowerBound <= upperBound){
+		let mid = Math.floor((upperBound + lowerBound) / 2);
+		if(arr[mid] < data){
+			lowerBound = mid + 1;
+		}else if(arr[mid] > data){
+			upperBound = mid + 1;
+		}else{
+			return mid;
+		}
+	}
+	return -1;
+}
+```
+
+至此，导师计划--数据结构和算法已经完结。后期的话会在另一篇文章中补充一下各个算法的时间复杂度的比较（不作为课程讲解，要动笔算算的，而且也就是总结一个表而已），当然你可以查看文章[算法的时间复杂度](https://juejin.im/post/5c3405a3518825253315d61c)来自行理解，并去总结。
+
+![886](https://user-gold-cdn.xitu.io/2018/7/10/16481e2fa26f85d4)
 
 
 ### 后话
@@ -281,6 +360,8 @@ quickAux(arr){
 ![author_wechat_permission](https://img-fe.ggwan.com/images/a3198fa0bca62f-1272x1008.png)
 
  > 绘图软件 [Numbers](https://www.apple.com/numbers/)，本篇文章用到的[图片绘图稿](https://github.com/reng99/blogs/blob/master/src/algorithm/algorithm.numbers)感兴趣可以下载。
+ 
+> 课程代码可以戳[相关算法](https://github.com/reng99/blogs/tree/master/src/algorithm)来获取
 
 > 部分图片来自网络，侵删
 
